cargo-features = ["profile-rustflags"]

[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.2"
rayon = "1.7.0"
rand = "0.8.5"

[profile.dev]
debug = true
rustflags = ["-C", "target-cpu=native",  "-Z", "tune-cpu=native"]
